--- a/templates/annotate_site/index.html
+++ b/templates/annotate_site/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="{% static 'annotate_site/app/build/styles.css' %}">
 </head>
 <body>
-    <div class="container-fluid" id="app"></div>
+    <div class="container-fluid" id="app">
+        <h1>Hello world!</h1>
+    </div>
     <script src="{% static 'annotate_site/app/build/app.build.js' %}"></script>
 </body>
 </html>
