--- a/core/templates/annotate_site/index.html
+++ b/core/templates/annotate_site/index.html
@@ -5,12 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <title>AnnotateSite</title>
-    <link rel="stylesheet" href="{% static 'annotate_site/app/build/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'core/build/styles.css' %}">
 </head>
 <body>
     <div class="container-fluid" id="app">
-        <h1>Hello world!</h1>
     </div>
-    <script src="{% static 'annotate_site/app/build/app.build.js' %}"></script>
+    <script src="{% static 'core/build/app.build.js' %}"></script>
 </body>
 </html>
