--- a/core/static/core/app.less
+++ b/core/static/core/app.less
@@ -14,12 +14,12 @@ body {
 }
 
 .form-center {
-    margin-bottom: 100px;
+    margin-bottom: 10px;
 }
 
 .app {
-  height: 100vh;
-  display: flex;
+  height: 80%;
+  margin-top: 20px;
   color: white;
 }
 
@@ -27,41 +27,8 @@ body {
   width: 50%;
   margin: 0px auto;
   background-color: #2E4158;
-  padding: 25px 40px;
+  padding: 25px 10px;
   overflow: auto;
-}
-
-.page-switcher {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 10%;
-}
-
-.page-switcher-item {
-  background-color: #4C5D72;
-  color: #9DA6B1;
-  padding: 10px 25px;
-  cursor: pointer;
-  font-size: .9em;
-  border: none;
-  outline: none;
-  display: inline-block;
-  text-decoration: none;
-}
-
-.page-switcher-item-active {
-  background-color: #5ED0C0;
-  color: white;
-}
-
-.page-switcher-item:first-child {
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-}
-
-.page-switcher-item:last-child {
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
 }
 
 .form-title {
