--- a/core/static/core/app.less
+++ b/core/static/core/app.less
@@ -171,6 +171,19 @@ input:focus {
 }
 
 .image-annotation {
+    margin-left: 50px;
+    margin-top: 50px;
     height: 500px;
     width: 500px !important;
+}
+
+.form-annotation {
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.remove-annotation {
+    height: 30px;
+    margin-left: 1em;
+    margin-top: .4em;
 }
