--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Annotate__Site</title>
+    <title>AnnotateSite</title>
     <link rel="stylesheet" href="{% static 'core/build/styles.css' %}">
 </head>
 <body>
