--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <title>AnnotateSite</title>
-    <link rel="stylesheet" href="{% static 'core/build/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'core/styles.css' %}">
 </head>
 <body>
     <div class="container-fluid" id="app">
     </div>
-    <script src="{% static 'core/build/app.build.js' %}"></script>
+    <script src="{% static 'core/app.build.js' %}"></script>
 </body>
 </html>
