--- a/core/src/app.less
+++ b/core/src/app.less
@@ -164,15 +164,14 @@ input:focus {
 }
 
 .image-annotation {
-    margin-left: 50px;
-    margin-top: 50px;
+    margin-left: 20px;
+    margin-top: 20px;
     height: 500px;
     width: 500px !important;
 }
 
 .form-annotation {
-    margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .remove-annotation {
@@ -200,4 +199,8 @@ input:focus {
     padding: 5px;
     border-radius: 3;
     position: absolute;
+}
+
+.form-row .form-column {
+    width: 28%;
 }
