Добавил главную страницу + выгрузку классификации

--- a/core/src/app.less
+++ b/core/src/app.less
@@ -243,3 +243,9 @@ input:focus {
 #classification-classes input {
     width: 10%;
 }
+
+.btn-download {
+    background-color: #4a77d4;
+    color: #000;
+    margin-left: 20px;
+}
