--- a/core/src/app.less
+++ b/core/src/app.less
@@ -100,6 +100,14 @@
     display:block; 
 }
 
+.btn-gallery {
+    padding: 10px;
+}
+
+.btn-gallery button {
+    margin-left: 10px;
+}
+
 * { 
     -webkit-box-sizing:border-box; 
     -moz-box-sizing:border-box; 
@@ -117,6 +125,7 @@ html {
 body { 
     width: 100%;
     height:100%;
+    overflow-y: auto;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -248,77 +257,6 @@ input:focus {
     background-color: #4a77d4;
     color: #000;
     margin-left: 20px;
-}
-
-.hidden-menu {
-  display: block;
-  position: fixed;
-  list-style:none;
-  padding: 10px;
-  margin: 0;
-  box-sizing: border-box;
-  width: 800px;
-  background-color: #eee;
-  height: 100%;
-  top: 0;
-  left: -800px;
-  transition: left .2s;
-  z-index: 2;
-  -webkit-transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-}
-
-.hidden-menu-ticker {
-  display: none;
-}
-
-.btn-menu {
-  color: #fff;
-  background-color: #666;
-  padding: 5px;
-  position: fixed;
-  top: 5px;
-  left: 5px;
-  cursor: pointer;
-  transition: left .23s;
-  z-index: 3;
-  width: 25px;
-  -webkit-transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-}
-.btn-menu span {
-  display: block;
-  height: 5px;
-  background-color: #fff;
-  margin: 5px 0 0;
-  transition: all .1s linear .23s;
-  position: relative;
-}
-
-.btn-menu span.first {
-  margin-top: 0;
-}
-
-.hidden-menu-ticker:checked ~ .btn-menu {
-  left: 760px;
-}
-
-.hidden-menu-ticker:checked ~ .hidden-menu {
-  left: 0;
-}
-
-.hidden-menu-ticker:checked ~ .btn-menu span.first {
-  -webkit-transform: rotate(45deg);
-  top: 10px;
-}
-
-.hidden-menu-ticker:checked ~ .btn-menu span.second {
-  opacity: 0;
-}
-
-.hidden-menu-ticker:checked ~ .btn-menu span.third {
-  -webkit-transform: rotate(-45deg);
-  top: -10px;
 }
 
 #main-description {
