--- a/core/src/app.less
+++ b/core/src/app.less
@@ -366,3 +366,28 @@ input:focus {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 } 
+
+.react-player div{
+  margin: 20px auto;
+}
+
+.got-it {
+  margin: 20px 50px;
+  float: right;
+}
+
+.background {
+  background-color: #e1e5ea;
+}
+
+.instruction-header {
+  margin: 80px 10px 15px 10px;
+  font-size: 40px;
+  text-align: center;
+}
+
+.instruction-description {
+  font-size: 20px;  
+  margin-bottom: 20px;
+  text-align: center;
+}
