--- a/core/src/app.less
+++ b/core/src/app.less
@@ -71,6 +71,7 @@
 }
 
 .btn-primary { 
+    margin-right: 10px;
     background-color: #4a77d4; 
     background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); 
     background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); 
@@ -227,10 +228,6 @@ input:focus {
     width: 60%;
 }
 
-#delete-image {
-    margin-left: 20px;
-}
-
 #image-class {
     width: 67%;
     margin-left: 4%;
@@ -251,12 +248,6 @@ input:focus {
 
 #classification-classes input {
     width: 10%;
-}
-
-.btn-download {
-    background-color: #4a77d4;
-    color: #000;
-    margin-left: 20px;
 }
 
 #main-description {
@@ -375,3 +366,28 @@ input:focus {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 } 
+
+.react-player div{
+  margin: 20px auto;
+}
+
+.got-it {
+  margin: 20px 50px;
+  float: right;
+}
+
+.background {
+  background-color: #e1e5ea;
+}
+
+.instruction-header {
+  margin: 80px 10px 15px 10px;
+  font-size: 40px;
+  text-align: center;
+}
+
+.instruction-description {
+  font-size: 20px;  
+  margin-bottom: 20px;
+  text-align: center;
+}
