Настройки для авторизации через соцсети

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AnnotateSite</title>
+    <title>IdeaMining.art</title>
     <link rel="stylesheet" href="{% static 'core/styles.css' %}">
 </head>
 <body>
