--- a/core/src/app.less
+++ b/core/src/app.less
@@ -174,10 +174,22 @@ input:focus {
 }
 
 .image-annotation {
-    margin-left: 20px;
-    margin-top: 20px;
+    width: 100%;
     height: 80vh;
-    width: 500px !important;
+    margin-top: 20px;
+    overflow: auto;
+}
+
+.image-for-classification {
+    width: 100%;
+    height: 80vh;
+    margin-top: 20px;
+    overflow: auto;
+}
+
+.image-for-classification img {
+    display: block;
+    margin: 0 auto;
 }
 
 .form-annotation {
@@ -206,10 +218,6 @@ input:focus {
     cursor: pointer;
 }
 
-.form-row div {
-    margin-right: 1em;
-}
-
 .form-group {
     margin-bottom: 0.1em;
 }
@@ -234,20 +242,9 @@ input:focus {
     margin-bottom: 10px;
 }
 
-.image-for-classification {
-    width: 100%;
-    height: 80vh;
-    margin-top: 20px;
-    overflow: auto;
-}
-
-.image-for-classification img {
-    display: block;
-    margin: 0 auto;
-}
-
 #main-description {
     padding: 20px 50px;
+    font-size: 18px;
 }
 
 #symbol-navigation {
@@ -389,23 +386,25 @@ input:focus {
 }
 
 #image-classificaion {
-  width: 50%;
-  float: left;
-  padding: 20px;
+  width: 100%;
 }
 
 #image-detection {
-  width: 50%;
-  float: right;
-  padding: 20px;
+  width: 100%;
+  margin-top: 5%;
 }
 
 .main-page-row {
-  padding-top: 50px;
+  margin-top: 80px;
+}
+
+.short-description {
+  font-size: 18px;
 }
 
 .main-page-header {
   text-align: center;
+  margin-bottom: 30px;
 }
 
 ol.goals  {
@@ -434,4 +433,18 @@ ol.goals > li::before {
   top: 0;
   transition: all 0.3s ease 0s;
   width: 22px;
+}
+
+
+.left {
+    width: 50%;
+    padding-right: 25px;
+    float: left;
+    position: relative;
+}
+.right {
+    width: 50%;
+    padding-left: 25px;
+    float: left;
+    position: relative;
 }
